--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,25 +1,15 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@use "@colors" as colors;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  color: colors.$text-primary;
+  background-color: colors.$background;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
