--- a/src/components/pages/Main/HotTours/Cards/Card.module.scss
+++ b/src/components/pages/Main/HotTours/Cards/Card.module.scss
@@ -2,71 +2,26 @@
 @use "@fonts" as fonts;
 @use "@mixins/typography" as typography;
 
-.card_wrapper{
-    position: relative;
-    //width: calc((100% - 2 * 32px) / 3);
-    &::before {
-        content: "''";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
-        pointer-events: none; /* Чтобы градиент не мешал кликам по изображению */
-        border-radius: 10px
-      }
-}
-
-.country{
-    @include typography.description;
-    font-size: 20px;
-    color: colors.$background;
-}
-
-.city{
-    @include typography.title;
-    color: colors.$background;
-}
-
-.location_wrapper{
-    display: flex;
-    flex-direction: row;
-    column-gap: 5px;
-}
-
-.price_wrapper{
-    display: flex;
-    flex-direction: row;
-    column-gap: 5px;
-}
-
-.countPeople_wrapper{
-    display: flex;
-    flex-direction: row;
-    column-gap: 5px;
-}
-
-
 .card{
-    border-radius: 10px;
+
+}
+
+.image {
+     border-radius: 10px;
+     
+&__wrapper {
+    position: relative;
+    width: 100%;
+    min-height: 280px;
+&::before {
+    z-index: 1;
+    content: "''";
+    position: absolute;
     width: 100%;
     height: 100%;
+    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
+    pointer-events: none; /* Чтобы градиент не мешал кликам по изображению */
+    border-radius: 10px
+  }
 }
-
-
-.card_text_wrapper{
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: column;
-    position: absolute;
-    top:140px;
-    left: 30px;
-}
-
-.price_countPeople_wrapper{
-    display: flex;
-    flex-direction: row;
-    column-gap: 30px;
 }
