--- a/src/components/pages/Main/HotTours/Cards/Card.module.scss
+++ b/src/components/pages/Main/HotTours/Cards/Card.module.scss
@@ -3,7 +3,13 @@
 @use "@mixins/typography" as typography;
 
 .card{
-
+  border-radius: 10px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); /* Тень */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .image {
@@ -19,9 +25,52 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
     pointer-events: none; /* Чтобы градиент не мешал кликам по изображению */
-    border-radius: 10px
+    border-radius: 10px;
   }
 }
+}
+
+.geolocation{
+  @include typography.description;
+  font-size: 20px;
+  color: colors.$text-secondary;
+  margin-top: 15px;
+  
+}
+
+.hotelName{
+  @include typography.title;
+    color: colors.$text-primary;
+    font-size: 27px;
+    margin-top: 10px;
+}
+.stars{
+  color: #EFDE1D;
+  font-size: 27px;
+}
+
+.date, .personCount{
+  @include typography.description;
+  font-size: 20px;
+  color: colors.$text-primary;
+  margin-top: 10px;
+}
+.priceFrom{
+  @include typography.description;
+  font-size: 20px;
+  color: colors.$text-primary;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+
+.line_division{
+  border: 1px solid colors.$text-secondary;
+  margin-top: 10px;
+  width: 80%;
+  
+}
+
+.priceValue{
+  font-weight: 600;
 }
