--- a/src/components/pages/Main/AboutUs/Description.module.scss
+++ b/src/components/pages/Main/AboutUs/Description.module.scss
@@ -36,6 +36,8 @@
     margin-top: 40px;
     font-family:manrope;
   font-weight: 600;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 
+  0 1px 3px rgba(0, 0, 0, 0.08);
   }
   .benefit_1 {
     @include typography.description;
