--- a/src/components/pages/Main/PopularDestination/Cards/Card.module.scss
+++ b/src/components/pages/Main/PopularDestination/Cards/Card.module.scss
@@ -2,72 +2,77 @@
 @use "@fonts" as fonts;
 @use "@mixins/typography" as typography;
 
-.card_wrapper{
-    position: relative;
-    //width: calc((100% - 2 * 32px) / 3);
-    &::before {
-        content: "''";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
-        pointer-events: none; /* Чтобы градиент не мешал кликам по изображению */
-        border-radius: 10px
-      }
+.card{
+position: relative;
+   overflow: hidden;
+   width: 100%;
+   border-radius: 10px; 
+  }
+  
+.image {
+    object-fit: cover;
 }
-
+.image__wrapper {
+    border-radius: 10px;
+   position: relative;
+   overflow: hidden;
+   width: 100%;
+   height: 300px;
+&::before {
+   z-index: 1;
+   content: "''";
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   pointer-events: none; /* Чтобы градиент не мешал кликам по изображению */
+   background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
+ }
+}
 .country{
     @include typography.description;
     font-size: 20px;
     color: colors.$background;
     margin-top: 5px;
+    position: absolute;
+    top: 134px;
+    left: 66px;
+    z-index: 2;
+    text-align: center;
 }
 
 .city{
     @include typography.title;
     color: colors.$background;
-}
-
-.location_wrapper{
-    display: flex;
-    flex-direction: row;
-    column-gap: 5px;
-}
-
-.price_wrapper{
-    display: flex;
-    flex-direction: row;
-    column-gap: 5px;
-}
-
-.countPeople_wrapper{
-    display: flex;
-    flex-direction: row;
-    column-gap: 5px;
-}
-
-
-.card{
-    border-radius: 10px;
-    width: 100%;
-    height: 100%;
-}
-
-
-.card_text_wrapper{
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: column;
     position: absolute;
-    top:140px;
+    top: 170px;
     left: 30px;
+    z-index: 2;
 }
 
-.price_countPeople_wrapper{
-    display: flex;
-    flex-direction: row;
-    column-gap: 30px;
+.location{
+    position: absolute;
+    top: 138px;
+    left: 30px;
+    z-index: 2;
 }
+
+.priceFrom{
+    position: absolute;
+    top: 234px;
+    left: 30px;
+    z-index: 2;
+    @include typography.description;
+    font-size: 20px;
+    color: colors.$background;
+}
+
+.personCount{
+    @include typography.description;
+    font-size: 20px;
+    color: colors.$background;
+    position: absolute;
+    top: 234px;
+    left: 260px;
+    z-index: 2;
+}
+
