--- a/src/components/pages/Main/Countries/Cards/Card.module.scss
+++ b/src/components/pages/Main/Countries/Cards/Card.module.scss
@@ -2,46 +2,41 @@
 @use "@fonts" as fonts;
 @use "@mixins/typography" as typography;
 
-.card_wrapper{
+.image {
+     border-radius: 10px; 
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+}
+.image__wrapper {
     position: relative;
-    //width: calc((100% - 2 * 32px) / 3);
-    &::before {
-        content: "''";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
-        pointer-events: none; /* Чтобы градиент не мешал кликам по изображению */
-        border-radius: 10px
-      }
+    overflow: hidden;
+    width: 100%;
+    height: 380px;
+&::before {
+    z-index: 1;
+    content: "''";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; /* Чтобы градиент не мешал кликам по изображению */
+    border-radius: 10px;
+    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
+  }
 }
 
 .country{
-    @include typography.description;
+    @include typography.title;
     font-size: 40px;
     color: colors.$background;
-    margin-top: 5px;
-}
-
-
-
-.card{
-    border-radius: 10px;
-    width: 100%;
-    height: 100%;
-}
-
-
-.card_text_wrapper{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
     position: absolute;
-    @include typography.title;
-    font-size: 42px;
-    top: 140px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 2;
+    text-align: center;
 }
+
+
+
 
