--- a/src/components/AppFrame/Header/index.module.scss
+++ b/src/components/AppFrame/Header/index.module.scss
@@ -3,12 +3,12 @@
 
 .header {
     border-bottom: 1px solid colors.$border;
-    border-radius: 10px;
+    border-radius: 0px 0px 10px 10px;
     min-height: 148px;
     position: fixed;
     min-width: 100vw;
     background-color: colors.$background;
-    z-index: 1;
+    z-index: 100;
 }
 
 .container {
@@ -18,5 +18,4 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    z-index: 100;
 }
