--- a/src/components/pages/Main/Banner/Image.module.scss
+++ b/src/components/pages/Main/Banner/Image.module.scss
@@ -1,56 +1,21 @@
 .images {
   position: relative;
   width: 100%;
-  max-width: 1200px;
   height: 100%;
-  z-index: 1;
+ z-index: 0;
 }
 
 .mainBannerImage {
   width: clamp(600px, 65vw, 950px);
   aspect-ratio: 16 / 10;
+  transform: translateY(50px);
 }
 
-.banner_image,
-.image_1,
-.image_2,
-.image_3,
-.image_4 {
+.backgroundBannerImage{
   position: absolute;
-  aspect-ratio: 3 / 4;
-  border-radius: 10px;
-  object-fit: cover;
-  z-index: 2;
-}
-
-/* Используем clamp для адаптивной ширины */
-.banner_image {
-  width: clamp(300px, 20vw, 400px);
-  top: 15%;
-  left: 25%;
-  align-items: center;
-}
-
-.image_1 {
-  width: clamp(140px, 14vw, 200px);
-  top: 18%;
-  left: 9%;
-}
-
-.image_2 {
-  width: clamp(120px, 12vw, 180px);
-  top: 58%;
-  left: 11%;
-}
-
-.image_3 {
-  width: clamp(120px, 12vw, 180px);
-  top: 20%;
-  left: 60%;
-}
-
-.image_4 {
-  width: clamp(130px, 13vw, 190px);
-  top: 50%;
-  left: 60%;
+  left: -38px;
+  top: -68px;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
