--- a/src/components/AppFrame/Footer/index.module.scss
+++ b/src/components/AppFrame/Footer/index.module.scss
@@ -15,7 +15,7 @@
     color: colors.$background;
     font-size: 20px;
     flex-wrap: wrap;
-    padding-top: 80px;
+    padding: 80px 50px 0;
 }
 
 .bottom_elements{
