--- a/src/components/pages/Main/Banner/Description.module.scss
+++ b/src/components/pages/Main/Banner/Description.module.scss
@@ -1,28 +1,32 @@
 @use "@colors" as colors;
 @use "@fonts" as fonts;
 @use "@mixins/typography" as typography;
+@use "@breakpoints" as breakpoints;
 
-.overtitle {
-  @include typography.overtitle;
+.overtitle{
   text-transform: uppercase;
 }
 
-.title {
-  @include typography.title;
+ .title {
   font-size: 52px;
-  margin-top: 20px;
-}
+   margin-top: 20px;
+   font-weight: 700;
+   @include typography.tablet{
+    font-size: 42px;
+  }
+  @include typography.mobile{
+    font-size: 28px;
+  }
+ }
 
 
 .description {
-  @include typography.description;
   margin-top: 20px;
 }
 
 .filled_button{
 display: inline-block;
 background-color: colors.$primary;
- @include typography.description;
 color: colors.$background; 
 border-radius: 10px;
 width: 180px;
@@ -38,7 +42,6 @@ border-color: colors.$background;
 
 .outline_button{
   background-color: colors.$background;
-  @include typography.description;
   color: colors.$text-primary; 
   border-color: colors.$primary;
   border-radius: 10px;
@@ -50,7 +53,7 @@ border-color: colors.$background;
 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
-.text_and_button{ 
+.wrapper{ 
     min-width: 540px;
     margin: 176px 0;
     z-index: 1;
