--- a/src/components/pages/Main/HotTours/Cards/Card.module.scss
+++ b/src/components/pages/Main/HotTours/Cards/Card.module.scss
@@ -3,7 +3,6 @@
 @use "@mixins/typography" as typography;
 
 .card{
-  border-radius: 10px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); /* Тень */
   display: flex;
   flex-direction: column;
@@ -32,7 +31,6 @@
 }
 
 .geolocation{
-  font-size: 20px;
   color: colors.$text-secondary;
   margin-top: 15px;
   
@@ -40,21 +38,28 @@
 
 .hotelName{
     color: colors.$text-primary;
-    font-size: 27px;
     margin-top: 10px;
+    font-size: 24px;
+    @include typography.laptop{
+      font-size: 20px;
+    }
+    @include typography.tablet{
+      font-size: 18px;
+    }
+    @include typography.mobile{
+      font-size: 18px;
+    }
 }
 .stars{
   color: #FFB904;
-  font-size: 27px;
+  font-size: 24px;
 }
 
 .date, .personCount{
-  font-size: 20px;
   color: colors.$text-primary;
   margin-top: 10px;
 }
 .priceFrom{
-  font-size: 20px;
   color: colors.$text-primary;
   margin-top: 15px;
   margin-bottom: 20px;
