--- a/src/components/pages/Main/HotTours/Tabs/index.module.scss
+++ b/src/components/pages/Main/HotTours/Tabs/index.module.scss
@@ -5,7 +5,7 @@
 
 .button{
     background-color: colors.$background;
-    color: colors.$text-primary; 
+   
     border-radius: 10px;
     border-color: colors.$background;
     width: 180px;
@@ -13,7 +13,12 @@
     font-family:manrope;
     font-weight: 600;
     filter: drop-shadow(1px 1px 1px);
-}
+    &__active{
+       background-color: colors.$primary;
+        
+    }
+} 
+
 
 .button_wrapper{
   display: flex;
