--- a/src/components/pages/Main/AboutUs/Description.module.scss
+++ b/src/components/pages/Main/AboutUs/Description.module.scss
@@ -1,11 +1,9 @@
 @use "@colors" as colors;
 @use "@fonts" as fonts;
-@use "@mixins/typography" as typography;
+
 
 .description_wrapper{
     order: 2;
-    margin-left: 70px;
-    margin-bottom: 40px;
 }
 
 .overtitle {
@@ -20,20 +18,6 @@
   
   .description {
     font-size: 21px;
-  }
-
-  .outline_button{
-    background-color: colors.$background;
-    color: colors.$text-primary; 
-    border-color: colors.$primary;
-    border-radius: 10px;
-    width: 180px;
-    height: 48px;
-    margin-top: 40px;
-    font-family:manrope;
-  font-weight: 600;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 
-  0 1px 3px rgba(0, 0, 0, 0.08);
   }
 
   .benefit_1 {
@@ -54,4 +38,8 @@
     justify-content: flex-start;
     align-items: center;
     column-gap: 20px;
+  }
+
+  .button_wrapper{
+    margin-top: 40px;
   }
