--- a/src/components/pages/Main/HotTours/Cards/Card.module.scss
+++ b/src/components/pages/Main/HotTours/Cards/Card.module.scss
@@ -1,6 +1,6 @@
 @use "@colors" as colors;
 @use "@fonts" as fonts;
-@use "@mixins/typography" as typography;
+@use "@breakpoints" as breakpoints;
 
 .card{
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); /* Тень */
@@ -13,14 +13,13 @@
 
 .image {
      border-radius: 10px;
-     
 &__wrapper {
     position: relative;
     width: 100%;
-    min-height: 280px;
+    min-height: 240px;
 &::before {
     z-index: 1;
-    content: "''";
+    content: " ";
     position: absolute;
     width: 100%;
     height: 100%;
@@ -31,36 +30,18 @@
 }
 
 .geolocation{
-  color: colors.$text-secondary;
   margin-top: 15px;
-  
 }
 
-.hotelName{
-    color: colors.$text-primary;
-    margin-top: 10px;
-    font-size: 24px;
-    @include typography.laptop{
-      font-size: 20px;
-    }
-    @include typography.tablet{
-      font-size: 18px;
-    }
-    @include typography.mobile{
-      font-size: 18px;
-    }
-}
 .stars{
   color: #FFB904;
   font-size: 24px;
 }
 
-.date, .personCount{
-  color: colors.$text-primary;
+.date, .personCount, .hotelName{
   margin-top: 10px;
 }
 .priceFrom{
-  color: colors.$text-primary;
   margin-top: 15px;
   margin-bottom: 20px;
 }
