--- a/src/components/AppFrame/Header/index.module.scss
+++ b/src/components/AppFrame/Header/index.module.scss
@@ -4,7 +4,7 @@
 .header {
     border-bottom: 1px solid colors.$border;
     border-radius: 0px 0px 10px 10px;
-    min-height: 148px;
+    min-height: 80px;
     position: fixed;
     min-width: 100vw;
     background-color: colors.$background;
@@ -17,5 +17,5 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
