--- a/src/components/common/Button/index.module.scss
+++ b/src/components/common/Button/index.module.scss
@@ -1,30 +1,39 @@
 @use "@colors" as colors;
 @use "@fonts" as fonts;
-@use "@mixins/typography" as typography;
 @use "@breakpoints" as breakpoints;
 
-.filled_button{
+.filledButton{
 display: inline-block;
 background-color: colors.$primary;
 color: colors.$background; 
 border-radius: 10px;
-width: 180px;
+width: 160px;
 height: 48px;
 font-family:manrope;
 font-weight: 600;
 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 
 0 1px 3px rgba(0, 0, 0, 0.08);
 border-color: colors.$background;
+
+@include breakpoints.laptop{
+      width: 160px;
+    }
+    @include breakpoints.tablet{
+      width: 150px;
+    }
+    @include breakpoints.mobile{
+      width: 140px;
+    }
 }
 
 
 
-.outline_button{
+.outlineButton{
   background-color: colors.$background;
   color: colors.$text-primary; 
   border-color: colors.$primary;
   border-radius: 10px;
-  width: 180px;
+  width: 160px;
   height: 48px;
   font-family:manrope;
   font-weight: 600;
