--- a/src/components/common/Container/index.module.scss
+++ b/src/components/common/Container/index.module.scss
@@ -1,5 +1,4 @@
+@use "@mixins/common" as mixins;
 .container {
-  max-width: 1200px;
-  width: auto;
-  margin: 0 auto;
+ @include mixins.container;
 }
