--- a/src/components/pages/Main/Banner/Description.module.scss
+++ b/src/components/pages/Main/Banner/Description.module.scss
@@ -1,6 +1,5 @@
 @use "@colors" as colors;
 @use "@fonts" as fonts;
-@use "@mixins/typography" as typography;
 @use "@breakpoints" as breakpoints;
 
 .overtitle{
@@ -11,10 +10,10 @@
   font-size: 52px;
    margin-top: 20px;
    font-weight: 700;
-   @include typography.tablet{
+   @include breakpoints.tablet{
     font-size: 42px;
   }
-  @include typography.mobile{
+  @include breakpoints.mobile{
     font-size: 28px;
   }
  }
@@ -24,34 +23,6 @@
   margin-top: 20px;
 }
 
-.filled_button{
-display: inline-block;
-background-color: colors.$primary;
-color: colors.$background; 
-border-radius: 10px;
-width: 180px;
-height: 48px;
-margin-top: 40px;
-margin-right: 40px;
-font-family:manrope;
-font-weight: 600;
-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 
-0 1px 3px rgba(0, 0, 0, 0.08);
-border-color: colors.$background;
-}
-
-.outline_button{
-  background-color: colors.$background;
-  color: colors.$text-primary; 
-  border-color: colors.$primary;
-  border-radius: 10px;
-  width: 180px;
-  height: 48px;
-  font-family:manrope;
-  font-weight: 600;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 
-0 1px 3px rgba(0, 0, 0, 0.08);
-}
 
 .wrapper{ 
     min-width: 540px;
@@ -59,3 +30,9 @@ border-color: colors.$background;
     z-index: 1;
   }
   
+  .button_wrapper{
+    display: flex;
+    flex-direction: row;
+    column-gap: 40px;
+    margin-top: 30px;
+  }
