--- a/src/components/pages/Main/HotTours/Cards/index.module.scss
+++ b/src/components/pages/Main/HotTours/Cards/index.module.scss
@@ -1,9 +1,9 @@
 .cards_wrapper{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(378px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     grid-gap: 32px;
     align-items: stretch;
     justify-content: flex-start;
-    margin: 30px 0 0 0;
+    margin: 40px;
     position: relative;
 }
