--- a/src/components/pages/Main/Reviews/Cards/Card.module.scss
+++ b/src/components/pages/Main/Reviews/Cards/Card.module.scss
@@ -1,10 +1,10 @@
 @use "@colors" as colors;
 @use "@fonts" as fonts;
-@use "@mixins/typography" as typography;
+
 
 .card{
   border-radius: 10px;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); /* Тень */
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,8 +27,8 @@ border-radius: 0px 10px 0px 10px;
      border-radius: 50%;
 &__wrapper {
     position: relative;
-    min-height: 130px;
-    min-width: 130px;
+    min-height: 120px;
+    min-width: 120px;
 &::before {
     z-index: 1;
     content: "''";
@@ -42,19 +42,15 @@ border-radius: 0px 10px 0px 10px;
 }
 
 .geolocation{
-  color: colors.$text-secondary;
   margin-top: 10px;
 }
 
 .description{
-  color: colors.$text-secondary;
   margin-top: 10px;
   text-align: center;
 }
 
 .name{
-    color: colors.$text-primary;
-    font-size: 24px;
     margin-top: 10px;
 }
 
@@ -66,7 +62,7 @@ border-radius: 0px 10px 0px 10px;
     flex-grow: 1;
     justify-content: flex-end;
     align-items: center;
-    gap: 8px; // отступ между текстом и звёздами
+    gap: 8px; 
     margin-top: 28px;
   }
   &_description {
@@ -82,10 +78,6 @@ border-radius: 0px 10px 0px 10px;
   width: 100%;
   margin-bottom: 10px;
   }
-
-.review{
-  color: colors.$text-secondary;
-}
 
 .stars{
   color: #FFB904;
