--- a/src/styles/mixins/common.scss
+++ b/src/styles/mixins/common.scss
@@ -1,4 +1,23 @@
+@use "@breakpoints" as breakpoints;
+
 @mixin container {
     max-width: 1312px;
     margin: 0 auto;
+    padding: 0 12px;
+    
+    @include breakpoints.laptop {
+    max-width: 1280px;
+     padding: 0 12px;
+    
+  }
+
+  @include breakpoints.tablet {
+    max-width: 720px;
+    padding: 0 10px;
+  }
+
+  @include breakpoints.mobile {
+    max-width: 100%;
+   padding: 0 8px;
+  }
 }
