--- a/src/styles/variables/_breakpoints.scss
+++ b/src/styles/variables/_breakpoints.scss
@@ -1,4 +1,34 @@
 $xlg: 1440px;
-$lg: 1200px;
+$lg: 1280px;
 $md: 900px;
 $sm: 600px;
+
+@mixin mobile {
+  @media screen and (max-width: calc($sm - 1px)) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media screen and (max-width: calc($md - 1px)) {
+    @content;
+  }
+}
+
+@mixin laptop {
+  @media screen and (max-width: calc($lg - 1px)) {
+    @content;
+  }
+}
+
+@mixin min-width($width) {
+  @media screen and (min-width: $width) {
+    @content;
+  }
+}
+
+@mixin max-width($width) {
+  @media screen and (max-width: $width) {
+    @content;
+  }
+}
