--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -3,4 +3,4 @@ $secondary: #2ecc71;
 $text-primary: #2c2c2c;
 $text-secondary: #505050;
 $background: #fcfdff;
-$border: #5c5b8883
+$border: #5c5b8883;
